--- a/public/500.html
+++ b/public/500.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title></title>
-<style>
-  .wrapper{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: #f2f2f2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  h1{
-    font-family: sans-serif;
-    font-weight: 200;
-    font-size: 4em;
-    color: #fc6767;
-    text-shadow: 3px 5px 15px #fc6767
-    /* text-shadow: h-shadow v-shadow blur-radius color|none|initial|inherit; */
-  }
-</style>
-</head>
-<body>
-  <div class='wrapper'>
-    <h1>Oh No! 500</h1>
-  </div>
-</body>
+  <head>
+    <title>Você não está conectado</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
+      body{ 
+        margin: 0;
+        background: #fff;
+        color: #d8d8d8;
+        font-size: 50px;
+        font-family: 'Noto Serif', serif;
+        letter-spacing: 3px;
+      }
+      div{
+        display: flex;
+        flex-direction: column;
+        width: 100vw;
+        height: 100vh;
+        align-items: center;
+        justify-content: center;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div>
+      <img src="error-pages-icon.png" width="130">
+      500
+    </div>
+  </body>
 </html>
